--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="action_settings">Jamat Finder</string>
+    <string name="action_settings">Settings</string>
     <string name="spinner_title">Select Jamat</string>
     <string name="service_not_available">Service not Available</string>
     <string name="no_address_found">No Address found</string>
